# shannon-fano

./: .travis.yml  CHANGELOG.md  README.md  ShannonFano.hs  default.nix  shannon-fano.cabal
.github/workflows/: ci.yml
Codec/Compression/: ShannonFano.hs  ShannonFano2.hs
app/: Main.hs
nix/: sources.json
shannon-fano-0.1.0.0-docs/: Codec-Compression-ShannonFano.html  shannon-fano.haddock
shannon-fano-0.1.0.0-docs/shannon-fano/: Codec-Compression-ShannonFano.html  doc-index.html
shannon-fano-0.1.0.0-docs/shannon-fano/src/: Codec-Compression-ShannonFano.html
src/Codec/Compression/: ShannonFano.hs
src/Codec/Compression/ShannonFano/: Internal.hs
tests/: Main.hs  QuickTests.hs
